Multiple Importance sampling for environment broken after mult-threading commit #43999

Closed
opened 2015-03-15 00:37:25 +01:00 by Adam Friesen · 9 comments

System Information
An Ivy Bridge i7 CPU, an ATI HD9xxx GPU, 16 gigs RAM, Windows 7 64 bit.

Blender Version
Broken: Blender 2.74 hash 3824e0f1
Worked: Any build done March 11 and before

Short description of error
It looks like the commit to multi-thread the generation of the environmental importance map has broken the feature completely.

Exact steps for others to reproduce the error
Download the .blend and switch to rendered mode, you'll see a lot of white fireflies which should be solid illumination (because of the MIS map), but the map is not generated and/or used in current builds.

.blend
BrokenMIS.blend

**System Information** An Ivy Bridge i7 CPU, an ATI HD9xxx GPU, 16 gigs RAM, Windows 7 64 bit. **Blender Version** Broken: Blender 2.74 hash 3824e0f1 Worked: Any build done March 11 and before **Short description of error** It looks like the commit to multi-thread the generation of the environmental importance map has broken the feature completely. **Exact steps for others to reproduce the error** Download the .blend and switch to rendered mode, you'll see a lot of white fireflies which should be solid illumination (because of the MIS map), but the map is not generated and/or used in current builds. **.blend** [BrokenMIS.blend](https://archive.blender.org/developer/F151472/BrokenMIS.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

Added subscriber: @nudelZ

Added subscriber: @nudelZ

strange setup but yes everything > 512 map res isn't working!

strange setup but yes everything > 512 map res isn't working!

Added subscriber: @candreacchio

Added subscriber: @candreacchio
Sergey Sharybin was assigned by Bastien Montagne 2015-03-15 11:26:14 +01:00
Sergey Sharybin was unassigned by Thomas Dinges 2015-03-15 13:33:13 +01:00
Thomas Dinges self-assigned this 2015-03-15 13:33:13 +01:00

This issue was referenced by 60df4d10ff

This issue was referenced by 60df4d10ffb6409e9c386951e5813b0dc37d4781

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 60df4d10ff.

Closed by commit 60df4d10ff.

This issue was referenced by blender/cycles@66fb5112b4

This issue was referenced by blender/cycles@66fb5112b477b447d9d1943e1d3d4c1d5b7d9e50
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43999
No description provided.