Fix T43999: MIS for environment broken after multi-threading commit

Typo in task start row calculation.